<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="title">QR Generator</string>
	<string name="tips_text">Please input text for generation.</string>
	<string name="app_name">QR Gen</string>
	<string name="button_share_contact">Contact</string>
	<string name="button_share_clipboard">Clipboard</string>
	<string name="button_clipboard_empty">Clipboard empty!</string>
	<string name="button_gen">Generate</string>
	<string name="button_label_card">Name Card</string>
	<string name="button_label_sign">Signature</string>
	<string name="card_title">QR Name Card</string>
	<string name="card_name">Name:</string>
	<string name="card_phone">Tel:</string>
	<string name="card_email">Email:</string>
	<string name="card_addr">Addr:</string>
	<string name="card_job">Job:</string>
	<string name="card_com">Company:</string>
	<string name="card_button_gen_label">Generate</string>
	<string name="button_label_date">Date</string>
	<string name="button_label_wifi">Wifi</string>
	<string name="wifi_title">QR Code for Wifi</string>
	<string name="wifi_id">ESSID:</string>
	<string name="wifi_pass">Key:</string>
	<string name="wifi_type">Encryption Type:</string>
	<string name="wifi_button_gen_label">Generate</string>
	<string name="wifi_choose_type">Choose Encryption Type</string>
	<string-array name="wifi_prompt">
        <item>Wep</item>
        <item>WPA/WPA2</item>
        <item>No Encryption</item>
    </string-array>
    <string-array name="weekday">
    	<item>Sunday</item>
    	<item>Monday</item>>
    	<item>Tuesday</item>>
    	<item>Wednesday</item>>
    	<item>Thursday</item>>
    	<item>Friday</item>>
    	<item>Saturday</item>>
    	<item>Sunday</item>>
    </string-array>
    <string name="button_label_bkmk">Bookmark</string>
    <string name="bkmk_title">QR Code for Bookmark</string>
    <string name="bkmk_name">Website Title:</string>
    <string name="bkmk_url">URL:</string>
    <string name="bkmk_note">Note:</string>
    <string name="bkmk_button_gen_label">Generate</string>
    <string name="bkmk_button_gen_from_user_label">From user bookmarks</string>
    <string name="button_label_app">Application</string>
    <string name="button_label_sms">SMS</string>
    <string name="app_picker_name">QR Code for Application</string>
    <string name="msg_loading_sms">Loading SMS...</string>
    <string name="encode_menu_save">Save</string>
    <string name="msg_unmount_usb">Unable to access SD card</string>
    <string name="history_send">Send History</string>
	<string name="history_clear_text">Clear History</string>
	<string name="history_title">History</string>
	<string name="history_email_title">QR Gen History</string>
	<string name="menu_history">History</string>
	<string name="menu_about">About</string>
	<string name="title_about">QR Gen</string>
	<string name="msg_about">QR Gen is a QR code generator.</string>
	<string name="author">Author:zTrix \nEmail:<mailto>zhuwl08@gmail.com</mailto></string>
	<string name="button_ok">OK</string>
	<string name="menu_share">Share</string>
	<string name="qrgen_error">Error</string>
	<string name="qrgen_ok">OK</string>
	<string name="bkmk_please_input">Please input the URL</string>
	<string name="wifi_please_input">Please input wifi essid</string>
	<string name="qrgen_please_input">Please input text to generate QR code</string>
	<string name="card_please_input">Please input at least one item for generation.</string>
	<string name="clipboard_empty">Clipboard Empty</string>
	<string name="qrgen_year">-</string>
	<string name="qrgen_month">-</string>
	<string name="qrgen_day"> </string>
	<string name="qrgen_week">Weekday</string>
	<string name="qrgen_hour">:</string>
	<string name="qrgen_minute"> </string>
	<string name="save_suc">Saved</string>
	<string name="save_at">QR code saved at </string>
	<string name="msg_loading_apps">Loading application...\u2026</string>
	<string name="msg_encode_barcode_failed">Could not generate the requested barcode.</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
</resources>
